@@ -1,7 +1,6 @@
 package org.knowm.xchange.okex.dto.marketdata;
 
 import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.ObjectCodec;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonDeserializer;
@@ -9,12 +8,13 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import java.io.IOException;
 import java.math.BigDecimal;
+import lombok.Getter;
 
 @JsonDeserialize(using = OkexPublicOrder.OkexOrderDeserializer.class)
 public class OkexPublicOrder {
 
-  private final BigDecimal price;
-  private final BigDecimal volume;
+  @Getter private final BigDecimal price;
+  @Getter private final BigDecimal volume;
   private final Integer liquidatedOrders;
   private final Integer activeOrders;
 
@@ -25,16 +25,6 @@ public class OkexPublicOrder {
     this.volume = volume;
     this.liquidatedOrders = liquidatedOrders;
     this.activeOrders = activeOrders;
-  }
-
-  public BigDecimal getPrice() {
-
-    return price;
-  }
-
-  public BigDecimal getVolume() {
-
-    return volume;
   }
 
   @Override
@@ -55,15 +45,15 @@ public class OkexPublicOrder {
 
     @Override
     public OkexPublicOrder deserialize(JsonParser jsonParser, DeserializationContext ctxt)
-        throws IOException, JsonProcessingException {
+        throws IOException {
 
       ObjectCodec oc = jsonParser.getCodec();
       JsonNode node = oc.readTree(jsonParser);
       if (node.isArray()) {
         BigDecimal price = new BigDecimal(node.path(0).asText());
         BigDecimal volume = new BigDecimal(node.path(1).asText());
-        Integer liquidatedOrders = new Integer(node.path(2).asText());
-        Integer activeOrders = new Integer(node.path(3).asText());
+        Integer liquidatedOrders = Integer.valueOf(node.path(2).asText());
+        Integer activeOrders = Integer.valueOf(node.path(3).asText());
 
         return new OkexPublicOrder(price, volume, liquidatedOrders, activeOrders);
       }
